<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bmecte.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_message"
            app:destination="@id/navigation_message" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bmecte.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.bmecte.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_save"
        android:name="com.example.bmecte.ui.save.SaveFragment"
        android:label="@string/title_save"
        tools:layout="@layout/fragment_save" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.bmecte.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" >
        <action
            android:id="@+id/action_navigation_message_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>